<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="16dp"
    tools:context="RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/btn_register_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/ic_back"/>

        <TextView
            android:id="@+id/et_register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Inscription"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/et_register_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_register_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:padding="10dp" />

        <EditText
            android:id="@+id/et_register_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/mail"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:drawableEnd="@drawable/ic_mail"/>

        <EditText
            android:id="@+id/et_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:drawableEnd="@drawable/ic_lock"/>
        <EditText
            android:id="@+id/et_register_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/repeatPassword"
            android:padding="10dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/et_register_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phoneNumber"
            android:padding="10dp"
            android:drawableEnd="@drawable/ic_phone"/>

        <CheckBox
            android:id="@+id/cb_register_cg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cgu_acceptation" />

        <Button
            android:id="@+id/btn_register_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:layout_margin="30dp"
            style="@style/Btn"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>