<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidUnresolvableTag -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="LoginActivity"
    android:background="@drawable/bxl_by_night">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="16dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        >

        <ImageView
            android:id="@+id/iv_home_logo"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/aztaxi" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:id="@+id/et_home_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/mail"
                style="@style/et_main"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_home_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_marginBottom="10dp"
                style="@style/et_main"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_home_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginBottom="10dp"
            style="@style/Btn"/>

        <TextView
            android:id="@+id/tv_home_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_subscribe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/pasEncoreInscrit"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>